@startuml game card rental entities
hide circle
skinparam linetype ortho
skinparam backgroundColor #fdf0d5
skinparam roundcorner 20
skinparam shadowing true
skinparam class {
    backgroundColor #003049
    arrowColor #003049
    borderColor #fdf0d5
    fontColor #fdf0d5
    attributeFontColor #fdf0d5
}

entity customer {
    id: integer <<generated>> <<pk>>
    firstName: text <<not null>>
    lastName: text
    credits: integer <<default 0>>
    description: text
    avatarAddr: text
    authId: uuid <<not null>>
    email: text
    mark: integer
    createdTime: timestamp <<generated>>
    updatedTime: timestamp <<generated>>
}

entity gameCard {
    id: integer <<generated>> <<pk>>
    name: text <<not null>>
    description: text
    inventory: integer <<not null>>
    price: numeric <<not null>>
    img: text
    mark: integer
    createdTime: timestamp <<generated>>
    updatedTime: timestamp <<generated>>
}

entity order {
    id: integer <<generated>> <<pk>>
    customerId: integer <<not null>>
    cost: numeric <<not null>>
    mark: integer
    createdTime: timestamp <<generated>>
    updatedTime: timestamp <<generated>>
}

entity cardOrderMapping {
    id: integer <<generated>> <<pk>>
    orderId: integer <<not null>>
    cardId: integer <<not null>>
    quantity: integer <<not null>>
    createdTime: timestamp <<generated>>
}

entity cardCategoryMapping {
    id: integer <<generated>> <<pk>>
    cardId: integer <<not null>>
    categoryId: integer <<not null>>
    createdTime: timestamp <<generated>>
}

entity category {
    id: integer <<generated>> <<pk>>
    code: text <<not null>>
    name: text <<not null>>
    description: text
    mark: integer
    createdTime: timestamp <<generated>>
    updatedTime: timestamp <<generated>>
}

order }o--|| customer
gameCard ||--o{ cardOrderMapping
cardOrderMapping }o--|| order
gameCard ||--o{ cardCategoryMapping
cardCategoryMapping }o--|| category


@enduml